--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -64,8 +64,8 @@ jobs:
       - name: Do typescript check
         run: yarn ts
 
-      - name: Run unit and integration tests
-        run: yarn test
+      - name: Run unit tests
+        run: yarn test --ci
 
       - name: Download and start backend
         if: github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')
