--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -91,8 +91,8 @@ jobs:
         uses: actions/upload-artifact@v3
         if: failure()
         with:
-          name: cypress-snapshots
-          path: cypress/snapshots
+          name: cypress-screenshots
+          path: cypress/screenshots
 
       - name: build
         run: yarn build
