--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "build-version-file": "echo $(git rev-parse --short HEAD) > public/build-version.txt",
     "test": "TZ=America/Los_Angeles craco test",
     "eject": "craco eject",
-    "generate-collateral": "yarn build-version-file",
+    "generate-collateral": "yarn build-version-file && yarn generate-strings",
+    "generate-strings": "node scripts/generate-strings.js",
     "generate-types": "node -r esm scripts/openapi-typescript-formatter.js",
     "cy:run": "TZ=UTC cypress run",
     "cy": "TZ=UTC cypress open",
@@ -104,6 +105,7 @@
     "@craco/craco": "^7.0.0",
     "@cypress/code-coverage": "^3.10.0",
     "@cypress/instrument-cra": "^1.4.0",
+    "csv": "^6.2.8",
     "cypress": "^12.7.0",
     "esm": "^3.2.25",
     "express": "^4.18.2",
