SW-3272 Generate string tables from CSV files (#1310)
The translation service we're going to use doesn't support TypeScript source
files. Move the English strings to a CSV file that has an additional column
(currently empty for all our strings) where we can add comments to give additional
context to translators.

We will send the English CSV file out for translation, and get back CSV files in
other languages; these will then be checked into the repo.

There's now a build step that converts the CSV files to JavaScript so they can be
imported from the rest of the code as usual. This is done as an explicit one-off
step in the CI workflow; in dev environments, the CSV files are monitored for
changes and processed on the fly so that edits to strings will be hot-reloaded
the same way they were reloaded when the strings table was a TypeScript source
file.

This change doesn't introduce any actual translation workflow steps, and for now,
the only locale with a CSV file is US English. But this will enable us to start
adding comments to our strings right away.

--- a/package.json
+++ b/package.json
@@ -66,11 +66,12 @@
     "build-version-file": "echo $(git rev-parse --short HEAD) > public/build-version.txt",
     "test": "TZ=America/Los_Angeles craco test",
     "eject": "craco eject",
-    "generate-collateral": "yarn build-version-file",
+    "generate-collateral": "yarn build-version-file && yarn generate-strings",
+    "generate-strings": "node scripts/generate-strings.js",
     "generate-types": "node -r esm scripts/openapi-typescript-formatter.js",
     "cy:run": "TZ=UTC cypress run",
     "cy": "TZ=UTC cypress open",
-    "e2e": "start-server-and-test start:dev http://127.0.0.1:3000 cy:run && yarn e2e:report",
+    "e2e": "NODE_OPTIONS=--max-old-space-size=3172 start-server-and-test start:dev http://127.0.0.1:3000 cy:run && yarn e2e:report",
     "e2e:report": "npx nyc report --reporter=text",
     "license-report": "license-report --only=prod --department.value=terraware --relatedTo.value=terraware-web --output=html > docs/license-report.html",
     "lint": "tslint --project tsconfig.json",
@@ -104,6 +105,8 @@
     "@craco/craco": "^7.0.0",
     "@cypress/code-coverage": "^3.10.0",
     "@cypress/instrument-cra": "^1.4.0",
+    "btoa": "^1.2.1",
+    "csv": "^6.2.8",
     "cypress": "^12.7.0",
     "esm": "^3.2.25",
     "express": "^4.18.2",
