Run Prettier on YAML file

--- a/.phrase.yml
+++ b/.phrase.yml
@@ -1,5 +1,5 @@
 phrase:
-  project_id: "8c9d8895494d179a2412d18b31e38203"
+  project_id: '8c9d8895494d179a2412d18b31e38203'
   file_format: csv
 
   push:
