--- a/package.json
+++ b/package.json
@@ -135,7 +135,6 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^5.0.0",
-    "tslint-react-hooks": "^2.2.2",
-    "webpack": "^5.83.1"
+    "tslint-react-hooks": "^2.2.2"
   }
 }
