fix build warnings in terraware-web related to typescript version
- warning is
```
TypeError: Cannot set property mark of #<Object> which has only a getter
TypeError: Cannot set property mark of #<Object> which has only a getter
    at Object.connectTypeScriptPerformance
```
- fix offending package version
- see https://github.com/TypeStrong/fork-ts-checker-webpack-plugin/issues/797

--- a/package.json
+++ b/package.json
@@ -136,5 +136,8 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^5.0.0",
     "tslint-react-hooks": "^2.2.2"
+  },
+  "resolutions": {
+    "fork-ts-checker-webpack-plugin": "^6.5.3"
   }
 }
