--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "luxon": "^3.3.0",
     "mapbox-gl": "^2.13.0",
     "moment": "^2.29.1",
+    "re-reselect": "^4.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-localization": "^1.0.17",
