SW-3394 Deploy using Tailscale instead of bastion
When deploying to the AWS hosts, connect to the VPC network using Tailscale and
ssh directly to the hosts rather than bouncing through a bastion host.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -130,11 +130,16 @@ jobs:
           aws-region: ${{ secrets[env.AWS_REGION_SECRET_NAME] }}
           role-to-assume: ${{ secrets[env.AWS_ROLE_SECRET_NAME] }}
 
+      - name: Connect to Tailscale
+        uses: tailscale/github-action@v1
+        with:
+          authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
+
       - name: Deploy
         if: env.IS_CD == 'true'
         env:
-          SSH_CONFIG: ${{ secrets[env.SSH_CONFIG_SECRET_NAME] }}
           SSH_KEY: ${{ secrets[env.SSH_KEY_SECRET_NAME] }}
+          SSH_USER: ${{ secrets[env.SSH_USER_SECRET_NAME] }}
         run: ./.github/scripts/deploy.sh
 
       - name: Jira Login
