SW-3348 Configure Spring Security OAuth2 on server
Update the local terraware-server configuration to reflect the fact that the
server is switching to a different authentication library. Developers will
have to modify their local `.env` files to move some of the configuration to
different environment variables; `.env.sample` is updated to show what the
configuration needs to look like.

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
 REACT_APP_TERRAWARE_API=http://localhost:8080
-KEYCLOAK_RESOURCE=
-KEYCLOAK_CREDENTIALS_SECRET=
-KEYCLOAK_REALM=
-KEYCLOAK_AUTH_SERVER_URL=https://auth.staging.terraware.io
+SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUERURI=https://auth.staging.terraware.io/realms/terraware
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KEYCLOAK_CLIENTSECRET=
+SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI=https://auth.staging.terraware.io/realms/terraware
 TERRAWARE_MAPBOX_API_TOKEN=
