--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -74,10 +74,9 @@ jobs:
         if: github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')
         run: yarn server:reset
         env:
-          KEYCLOAK_AUTH_SERVER_URL: http://dummy/
-          KEYCLOAK_CREDENTIALS_SECRET: dummy
-          KEYCLOAK_REALM: dummy
-          KEYCLOAK_RESOURCE: dummy
+          SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUERURI: http://dummy/realms/dummy
+          SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KEYCLOAK_CLIENTSECRET: dummy
+          SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI: http://dummy/realms/dummy
 
       - name: Run end-to-end cypress tests
         # Skip tests on main and releases because of Cypress hanging bug
