--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -74,9 +74,9 @@ jobs:
         if: github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')
         run: yarn server:reset
         env:
-          SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUERURI: http://dummy/realms/dummy
+          SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUERURI: https://auth.staging.terraware.io/realms/terraware
           SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KEYCLOAK_CLIENTSECRET: dummy
-          SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI: http://dummy/realms/dummy
+          SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI: https://auth.staging.terraware.io/realms/terraware
 
       - name: Run end-to-end cypress tests
         # Skip tests on main and releases because of Cypress hanging bug
