--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - edwardsa/SW-3027
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -45,6 +46,9 @@ jobs:
 
       - name: Output License Report
         run: yarn license-report
+
+      - name: Run unit tests to generate coverage
+        run: yarn test-coverage
 
       - name: Output git log since last release
         run: bash ./.github/scripts/gitlog.sh
