SW-3027 - Run unit tests and generate coverage as part of docs (#1471)

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Output License Report
         run: yarn license-report
 
+      - name: Run unit tests to generate coverage
+        run: yarn test-coverage
+
       - name: Output git log since last release
         run: bash ./.github/scripts/gitlog.sh
 
