--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.21.1",
     "chart.js": "^4.2.0",
     "chartjs-adapter-date-fns": "^2.0.0",
+    "chartjs-plugin-annotation": "^3.0.1",
     "classnames": "^2.3.1",
     "cookies-js": "^1.2.3",
     "coordinate-parser": "^1.0.7",
