Upgrade to latest Tailscale GitHub Action (#1535)
Tailscale now supports OAuth for client authentication; use it instead
of API-key-based authentication.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -130,9 +130,11 @@ jobs:
           role-to-assume: ${{ secrets[env.AWS_ROLE_SECRET_NAME] }}
 
       - name: Connect to Tailscale
-        uses: tailscale/github-action@v1
+        uses: tailscale/github-action@v2
         with:
-          authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
+          oauth-client-id: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
+          oauth-secret: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
+          tags: tag:github
 
       - name: Deploy
         if: env.IS_CD == 'true'
