--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@dnd-kit/sortable": "^7.0.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mapbox/mapbox-gl-draw": "^1.4.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
@@ -18,9 +19,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
+    "@turf/bbox": "^6.5.0",
+    "@types/geojson": "^7946.0.10",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.184",
     "@types/luxon": "^3.2.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.4.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^17.0.6",
