--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,20 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"]
+  "extends": [
+    "config:base",
+    ":preserveSemverRanges"
+  ],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch"],
+      "schedule": ["every weekend"],
+      "stabilityDays": 3
+    },
+    {
+      "matchUpdateTypes": ["major"],
+      "labels": ["UPDATE-MAJOR"],
+      "schedule": ["every weekend"],
+      "stabilityDays": 3
+    }
+  ]
 }
