--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -97,7 +97,7 @@ jobs:
           path: cypress/screenshots
 
       - name: build
-        run: yarn build
+        run: NODE_OPTIONS="--max-old-space-size=2048" yarn build
         env:
           REACT_APP_TERRAWARE_API: ''
           REACT_APP_TERRAWARE_FE_BUILD_VERSION: ${{ env.APP_VERSION }}
