--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mapbox/mapbox-gl-draw": "^1.4.2",
+    "@mui/base": "^5.0.0-beta.20",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
