--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "jest-mock-extended": "^3.0.1",
     "nyc": "^15.1.0",
     "openapi-typescript": "^6.7.0",
+    "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "start-server-and-test": "^2.0.0",
     "storybook": "^7.0.12",
