--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "server:reset": "./scripts/resetdb.sh",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "pre-commit": "yarn format && yarn lint && yarn ts && yarn test && yarn build"
+    "pre-commit": "yarn format && yarn lint && yarn ts && yarn test && yarn build",
+    "test:e2e": "yarn run playwright test playwright/e2e"
   },
   "eslintConfig": {
     "extends": [
@@ -121,6 +122,7 @@
     "@craco/craco": "^7.0.0",
     "@cypress/code-coverage": "^3.10.0",
     "@cypress/instrument-cra": "^1.4.0",
+    "@playwright/test": "^1.40.1",
     "@storybook/addon-essentials": "^7.0.12",
     "@storybook/addon-interactions": "^7.0.12",
     "@storybook/addon-links": "^7.0.12",
