SW-4570 react hook to manage data with undo/redo capability
- a simple hook similar to useState that allows undo/redo functionality
- for now this is super simple and can be extended later as needed, current functionality supports what we need for user drawn detailed sites
- added some tests

--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@storybook/react": "^7.0.12",
     "@storybook/react-webpack5": "^7.0.12",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "babel-plugin-named-exports-order": "^0.0.2",
     "btoa": "^1.2.1",
     "csv": "^6.2.8",
@@ -137,12 +138,14 @@
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.1",
+    "jest": "^29.7.0",
     "jest-mock-axios": "^4.4.1",
     "jest-mock-extended": "^3.0.1",
     "nyc": "^15.1.0",
     "openapi-typescript": "^6.7.0",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
+    "react-test-renderer": "17.0.2",
     "start-server-and-test": "^2.0.0",
     "storybook": "^7.0.12",
     "tslint": "^6.1.3",
