--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ src/strings/strings-*.js
 
 # ignore .vim swap files
 *.swp
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
