--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Run end-to-end playwright tests
         # Skip tests on main and releases because of Cypress hanging bug
         if: github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')
-        run: yarn test:e2egh
+        run: yarn test:e2e
         # Legacy Cypress timeout override.
         timeout-minutes: 60
         env:
