--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "pre-commit": "yarn format && yarn lint && yarn ts && yarn test && yarn build",
-    "test:e2e": "yarn run playwright test playwright/e2e",
-    "test:e2egh": "start-server-and-test start http://127.0.0.1:3000 test:e2e"
+    "playwright:run": "yarn run playwright test playwright/e2e",
+    "test:e2e": "start-server-and-test start http://127.0.0.1:3000 playwright:run"
   },
   "eslintConfig": {
     "extends": [
