--- a/.gitignore
+++ b/.gitignore
@@ -26,14 +26,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# cypress
-cypress/videos
-cypress/screenshots
-.eslintcache
-out.json
-photo-data
-report.csv
-
 # build version file
 public/build-version.txt
 
@@ -42,3 +34,7 @@ src/strings/strings-*.js
 
 # ignore .vim swap files
 *.swp
+
+# playwright
+/playwright-report/
+/playwright/test-results/
