--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.38.0",
     "styled-components": "^6.0.0",
-    "tslint-plugin-cypress": "^1.0.4",
     "typescript": "^5.0.0",
     "utm": "^1.1.1",
     "web-vitals": "^3.1.1",
@@ -66,8 +65,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "start:dev": "craco -r @cypress/instrument-cra start",
-    "build": "craco --max_old_space_size=4096 build",
+    "start:dev": "craco start",
+    "build": "craco --max_old_space_size=16384 build",
     "build-with-version": "export REACT_APP_TERRAWARE_FE_BUILD_VERSION=$(git rev-parse --short HEAD) && craco build",
     "build-version-file": "echo $(git rev-parse --short HEAD) > public/build-version.txt",
     "test": "TZ=America/Los_Angeles craco test",
@@ -76,10 +75,6 @@
     "generate-collateral": "yarn build-version-file && yarn generate-strings",
     "generate-strings": "node scripts/generate-strings.js",
     "generate-types": "node scripts/openapi-typescript-formatter.mjs",
-    "cy:run": "TZ=UTC cypress run",
-    "cy": "TZ=UTC cypress open",
-    "e2e": "NODE_OPTIONS=--max-old-space-size=3172 start-server-and-test start:dev http://127.0.0.1:3000 cy:run && yarn e2e:report",
-    "e2e:report": "npx nyc report --reporter=text",
     "license-report": "license-report --only=prod --department.value=terraware --relatedTo.value=terraware-web --output=html > docs/license-report.html",
     "lint": "tslint --project tsconfig.json",
     "ts": "tsc --project ./tsconfig.json",
@@ -93,7 +88,7 @@
     "build-storybook": "storybook build",
     "pre-commit": "yarn format && yarn lint && yarn ts && yarn test && yarn build",
     "playwright:run": "yarn run playwright test playwright/e2e",
-    "test:e2e": "start-server-and-test start http://127.0.0.1:3000 playwright:run"
+    "test:e2e": "NODE_OPTIONS=--max-old-space-size=16384 start-server-and-test start http://127.0.0.1:3000 playwright:run"
   },
   "eslintConfig": {
     "extends": [
@@ -121,8 +116,6 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
-    "@cypress/code-coverage": "^3.10.0",
-    "@cypress/instrument-cra": "^1.4.0",
     "@playwright/test": "^1.40.1",
     "@storybook/addon-essentials": "^7.0.12",
     "@storybook/addon-interactions": "^7.0.12",
@@ -136,7 +129,6 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "btoa": "^1.2.1",
     "csv": "^6.2.8",
-    "cypress": "^13.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "esm": "^3.2.25",
     "express": "^4.18.2",
