--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -59,17 +59,17 @@ jobs:
       #- name: Check that code is formatted
       #  run: yarn prettier --check .
 
-      - name: Generate strings
-        run: yarn generate-strings
+      #- name: Generate strings
+      #  run: yarn generate-strings
 
-      - name: Run linter
-        run: yarn lint
+      #- name: Run linter
+      #  run: yarn lint
 
-      - name: Do typescript check
-        run: yarn ts
+      #- name: Do typescript check
+      #  run: yarn ts
 
-      - name: Run unit tests
-        run: yarn test --ci
+      #- name: Run unit tests
+      #  run: yarn test --ci
 
       - name: Download and start backend
         if: github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')
