--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,20 +56,21 @@ jobs:
       #- name: generate schemas
       #  run: yarn generate-types
 
-      - name: Check that code is formatted
-        run: yarn prettier --check .
-
       - name: Generate strings
         run: yarn generate-strings
 
-      - name: Run linter
-        run: yarn lint
-
-      - name: Do typescript check
-        run: yarn ts
-
-      - name: Run unit tests
-        run: yarn test --ci
+# Skip non-browser tests for now to speed up CI runs     
+#      - name: Check that code is formatted
+#        run: yarn prettier --check .
+#
+#      - name: Run linter
+#        run: yarn lint
+#
+#      - name: Do typescript check
+#        run: yarn ts
+#
+#      - name: Run unit tests
+#        run: yarn test --ci
 
       - name: Download and start backend
         if: github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/')
@@ -100,68 +101,68 @@ jobs:
           path: playwright-report/
           retention-days: 30
 
-      - name: build
-        run: yarn build
-        env:
-          REACT_APP_TERRAWARE_API: ''
-          REACT_APP_TERRAWARE_FE_BUILD_VERSION: ${{ env.APP_VERSION }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Docker login
-        if: env.IS_CD == 'true'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Docker build/push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          cache-from: type=gha
-          cache-to: type=gha, mode=max
-          tags: ${{ env.DOCKER_TAGS }}
-          platforms: linux/amd64,linux/arm64
-          push: ${{ env.IS_CD == 'true' }}
-
-      - name: Configure AWS Credentials
-        if: env.IS_CD == 'true'
-        uses: aws-actions/configure-aws-credentials@v1-node16
-        with:
-          aws-region: ${{ secrets[env.AWS_REGION_SECRET_NAME] }}
-          role-to-assume: ${{ secrets[env.AWS_ROLE_SECRET_NAME] }}
-
-      - name: Connect to Tailscale
-        uses: tailscale/github-action@v2
-        with:
-          oauth-client-id: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
-          oauth-secret: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
-          tags: tag:github
-
-      - name: Deploy
-        if: env.IS_CD == 'true'
-        env:
-          SSH_KEY: ${{ secrets[env.SSH_KEY_SECRET_NAME] }}
-          SSH_USER: ${{ secrets[env.SSH_USER_SECRET_NAME] }}
-        run: ./.github/scripts/deploy.sh
-
-      - name: Jira Login
-        if: env.TIER == 'PROD'
-        uses: atlassian/gajira-login@master
-        env:
-          JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
-          JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
-          JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-
-      - name: Create Jira Transition List
-        if: env.TIER == 'PROD'
-        run: curl https://terraware.github.io/terraware-web/unreleased.log | grep -E 'SW-[0-9]+' -o | sort -u > ./docs/jiralist.txt
-
-      - name: Transition Jiras
-        if: env.TIER == 'PROD'
-        uses: terraware/gajira-transition-multiple@master
-        with:
-          issueList: ./docs/jiralist.txt
-          transition: 'Released to Production from Done'
+#      - name: build
+#        run: yarn build
+#        env:
+#          REACT_APP_TERRAWARE_API: ''
+#          REACT_APP_TERRAWARE_FE_BUILD_VERSION: ${{ env.APP_VERSION }}
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#
+#      - name: Docker login
+#        if: env.IS_CD == 'true'
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: Docker build/push
+#        uses: docker/build-push-action@v5
+#        with:
+#          context: .
+#          cache-from: type=gha
+#          cache-to: type=gha, mode=max
+#          tags: ${{ env.DOCKER_TAGS }}
+#          platforms: linux/amd64,linux/arm64
+#          push: ${{ env.IS_CD == 'true' }}
+#
+#      - name: Configure AWS Credentials
+#        if: env.IS_CD == 'true'
+#        uses: aws-actions/configure-aws-credentials@v1-node16
+#        with:
+#          aws-region: ${{ secrets[env.AWS_REGION_SECRET_NAME] }}
+#          role-to-assume: ${{ secrets[env.AWS_ROLE_SECRET_NAME] }}
+#
+#      - name: Connect to Tailscale
+#        uses: tailscale/github-action@v2
+#        with:
+#          oauth-client-id: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
+#          oauth-secret: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
+#          tags: tag:github
+#
+#      - name: Deploy
+#        if: env.IS_CD == 'true'
+#        env:
+#          SSH_KEY: ${{ secrets[env.SSH_KEY_SECRET_NAME] }}
+#          SSH_USER: ${{ secrets[env.SSH_USER_SECRET_NAME] }}
+#        run: ./.github/scripts/deploy.sh
+#
+#      - name: Jira Login
+#        if: env.TIER == 'PROD'
+#        uses: atlassian/gajira-login@master
+#        env:
+#          JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
+#          JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
+#          JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
+#
+#      - name: Create Jira Transition List
+#        if: env.TIER == 'PROD'
+#        run: curl https://terraware.github.io/terraware-web/unreleased.log | grep -E 'SW-[0-9]+' -o | sort -u > ./docs/jiralist.txt
+#
+#      - name: Transition Jiras
+#        if: env.TIER == 'PROD'
+#        uses: terraware/gajira-transition-multiple@master
+#        with:
+#          issueList: ./docs/jiralist.txt
+#          transition: 'Released to Production from Done'
