--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/sortable": "^8.0.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mapbox/mapbox-gl-draw": "^1.4.2",
     "@mui/base": "^5.0.0-beta.20",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.120",
-    "@mui/material": "^5.11.9",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/lab": "^5.0.0-alpha.159",
+    "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/styles": "^5.11.9",
+    "@mui/styles": "^5.15.3",
+    "@mui/x-date-pickers": "^6.18.7",
     "@reduxjs/toolkit": "^1.9.3",
     "@terraware/web-components": "^2.4.1",
     "@testing-library/jest-dom": "^6.0.0",
