--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@turf/bbox": "^6.5.0",
+    "@turf/center": "^6.5.0",
     "@turf/difference": "^6.5.0",
     "@turf/intersect": "^6.5.0",
     "@types/geojson": "^7946.0.10",
