--- a/package.json
+++ b/package.json
@@ -3,73 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "license": "Apache-2.0",
-  "dependencies": {
-    "@dnd-kit/core": "^6.0.5",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mapbox/mapbox-gl-draw": "^1.4.2",
-    "@mui/base": "^5.0.0-beta.20",
-    "@mui/icons-material": "^5.15.3",
-    "@mui/lab": "^5.0.0-alpha.159",
-    "@mui/material": "^5.15.3",
-    "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/styles": "^5.15.3",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@terraware/web-components": "2.5.4",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@turf/area": "^6.5.0",
-    "@turf/bbox": "^6.5.0",
-    "@turf/bbox-polygon": "^6.5.0",
-    "@turf/center": "^6.5.0",
-    "@turf/centroid": "^6.5.0",
-    "@turf/difference": "^6.5.0",
-    "@turf/intersect": "^6.5.0",
-    "@turf/union": "^6.5.0",
-    "@types/geojson": "^7946.0.10",
-    "@types/jest": "^29.4.0",
-    "@types/lodash": "^4.14.202",
-    "@types/luxon": "^3.2.0",
-    "@types/mapbox__mapbox-gl-draw": "^1.4.0",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^17.0.6",
-    "@types/react-router-dom": "^5.1.7",
-    "axios": "^1.6.2",
-    "chart.js": "^4.2.0",
-    "chartjs-adapter-date-fns": "^3.0.0",
-    "chartjs-plugin-annotation": "^3.0.1",
-    "classnames": "^2.3.1",
-    "cookies-js": "^1.2.3",
-    "coordinate-parser": "^1.0.7",
-    "date-fns": "^2.29.3",
-    "hex-rgb": "^5.0.0",
-    "immer": "^9.0.19",
-    "jwt-decode": "^3.1.2",
-    "license-report": "^6.0.0",
-    "lodash": "^4.17.21",
-    "luxon": "^3.3.0",
-    "mapbox-gl": "^2.13.0",
-    "moment": "^2.29.1",
-    "re-reselect": "^4.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-localization": "^1.0.17",
-    "react-map-gl": "^7.0.21",
-    "react-multi-carousel": "^2.8.2",
-    "react-redux": "^8.0.5",
-    "react-responsive": "^9.0.0-beta.6",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.38.0",
-    "styled-components": "^6.0.0",
-    "typescript": "^5.0.0",
-    "utm": "^1.1.1",
-    "web-vitals": "^3.1.1",
-    "worker-loader": "^3.0.8"
-  },
   "scripts": {
     "start": "craco start",
     "build": "craco --max_old_space_size=4096 build",
@@ -96,6 +29,61 @@
     "pre-commit": "yarn format && yarn lint && yarn ts && yarn test && yarn build",
     "playwright:run": "yarn run playwright test playwright/e2e",
     "test:e2e": "NODE_OPTIONS=--max-old-space-size=16384 start-server-and-test start http://127.0.0.1:3000 playwright:run"
+  },
+  "dependencies": {
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mapbox/mapbox-gl-draw": "^1.4.2",
+    "@mui/base": "^5.0.0-beta.20",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/lab": "^5.0.0-alpha.159",
+    "@mui/material": "^5.15.3",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.15.3",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@terraware/web-components": "2.5.4",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@turf/area": "^6.5.0",
+    "@turf/bbox": "^6.5.0",
+    "@turf/bbox-polygon": "^6.5.0",
+    "@turf/center": "^6.5.0",
+    "@turf/centroid": "^6.5.0",
+    "@turf/difference": "^6.5.0",
+    "@turf/intersect": "^6.5.0",
+    "@turf/union": "^6.5.0",
+    "axios": "^1.6.2",
+    "chart.js": "^4.2.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "classnames": "^2.3.1",
+    "cookies-js": "^1.2.3",
+    "coordinate-parser": "^1.0.7",
+    "date-fns": "^2.29.3",
+    "hex-rgb": "^5.0.0",
+    "immer": "^9.0.19",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
+    "mapbox-gl": "^2.13.0",
+    "moment": "^2.29.1",
+    "re-reselect": "^4.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-localization": "^1.0.17",
+    "react-map-gl": "^7.0.21",
+    "react-multi-carousel": "^2.8.2",
+    "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.0-beta.6",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.0",
+    "utm": "^1.1.1",
+    "web-vitals": "^3.1.1",
+    "worker-loader": "^3.0.8"
   },
   "eslintConfig": {
     "extends": [
@@ -132,7 +120,19 @@
     "@storybook/react": "^7.0.12",
     "@storybook/react-webpack5": "^7.0.12",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/geojson": "^7946.0.10",
+    "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.202",
+    "@types/luxon": "^3.2.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.4.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^17.0.6",
+    "@types/react-router-dom": "^5.1.7",
     "babel-plugin-named-exports-order": "^0.0.2",
     "btoa": "^1.2.1",
     "csv": "^6.2.8",
@@ -143,19 +143,23 @@
     "jest": "^29.7.0",
     "jest-mock-axios": "^4.4.1",
     "jest-mock-extended": "^3.0.1",
+    "license-report": "^6.0.0",
     "nyc": "^15.1.0",
     "openapi-typescript": "^6.7.3",
     "playwright": "^1.40.1",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "react-test-renderer": "17.0.2",
+    "sass": "^1.38.0",
     "start-server-and-test": "^2.0.0",
     "storybook": "^7.0.12",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
+    "tslint-plugin-cypress": "^1.0.4",
     "tslint-react": "^5.0.0",
-    "tslint-react-hooks": "^2.2.2"
+    "tslint-react-hooks": "^2.2.2",
+    "typescript": "^5.0.0"
   },
   "resolutions": {
     "fork-ts-checker-webpack-plugin": "^6.5.3"
