Use same postgres version for docker that we have in terraware-server, use local directory for database volume (#2048)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ version: '3.8'
 
 services:
   postgres:
-    image: 'postgis/postgis:15-3.3'
+    image: 'postgis/postgis:13-3.3'
     ports:
       - '5432:5432'
+    volumes:
+      - '$HOME/docker/volumes/postgres:/var/lib/postgresql'
     environment:
       POSTGRES_DB: 'terraware'
       POSTGRES_PASSWORD: 'terraware'
