--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@turf/area": "^6.5.0",
     "@turf/bbox": "^6.5.0",
+    "@turf/bbox-polygon": "^6.5.0",
     "@turf/center": "^6.5.0",
+    "@turf/centroid": "^6.5.0",
     "@turf/difference": "^6.5.0",
     "@turf/intersect": "^6.5.0",
     "@types/geojson": "^7946.0.10",
@@ -37,6 +40,7 @@
     "chart.js": "^4.2.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.0.1",
+    "cheap-ruler": "^3.0.2",
     "classnames": "^2.3.1",
     "cookies-js": "^1.2.3",
     "coordinate-parser": "^1.0.7",
