--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/styles": "^5.15.3",
     "@reduxjs/toolkit": "^1.9.3",
-    "@terraware/web-components": "^2.10.5",
+    "@terraware/web-components": "^2.10.6-rc.1",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
